[package]
name = "linkle"
version = "0.2.10"
authors = ["Thog <contact@thog.eu>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/MegatonHammer/linkle/"
repository = "https://github.com/MegatonHammer/linkle/"
edition = "2018"
description = "Nintendo file format manipulation library and tools."

[[bin]]
name = "linkle"
path = "src/bin/linkle_clap.rs"
required-features = ["binaries"]

[[bin]]
name = "cargo-nro"
path = "src/bin/cargo-nro.rs"
required-features = ["binaries"]

[dependencies]
elf = "0.0.10"
byteorder = "1"
lz4 = "1.23.1"
clap = { version = "2", optional = true }
structopt = { version = "0.3", optional = true }
sha2 = "0.9"
scroll = { version = "0.10", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = { version = "0.12.0", optional = true }
semver = {version = "0.11", optional = true }
goblin = { version = "0.2", optional = true }
rust-ini = "0.16"
failure = "0.1"
dirs = "3.0"
block-modes = "0.7"
aes = "0.6"
num-traits = "0.2"
derive_more = "0.99"
ctr = "0.6"
cmac = "0.5"
blz-nx = "1.0"
bit_field = "0.10"
cargo-toml2 = { version = "1.3.2", optional = true }

[features]
binaries = ["structopt", "cargo_metadata", "semver", "scroll", "goblin", "clap", "cargo-toml2"]
