[package]
name = "linkle"
version = "0.2.10"
authors = ["Thog <contact@thog.eu>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/MegatonHammer/linkle/"
repository = "https://github.com/MegatonHammer/linkle/"
edition = "2021"
description = "Nintendo file format manipulation library and tools."

[[bin]]
name = "linkle"
path = "src/bin/linkle_clap.rs"
required-features = ["binaries"]

[[bin]]
name = "cargo-nro"
path = "src/bin/cargo-nro.rs"
required-features = ["binaries"]

[dependencies]
# there are a lot of breaking changes there, kinda hard to update
elf = "0.0.12"
byteorder = "1"
lz4 = "1.23.1"
clap = { version = "4.0.32", optional = true, features = ["cargo"] }
structopt = { version = "0.3", optional = true }
sha2 = "0.10.6"
scroll = { version = "0.11.0", optional = true }
serde = "1"
serde_derive = "1"
serde_json = "1"
cargo_metadata = { version = "0.15.2", optional = true }
semver = { version = "1.0.16", optional = true }
goblin = { version = "0.6.0", optional = true }
rust-ini = "0.18.0"
snafu = { version = "0.7.4", features = ["backtraces"] }
dirs-next = "2.0.0"
num-traits = "0.2"
derive_more = "0.99"
blz-nx = "1.0"
bit_field = "0.10"
cargo-toml2 = { version = "1.3.2", optional = true }
binrw = "0.10.0"
getset = "0.1.2"
pretty-hex = "0.3.0"


cipher = "0.4.3"
digest = "0.10.6"
ctr = "0.9.2"
aes = "0.8.2"
cmac = "0.7.1"

xts-mode = "0.5.1"

[features]
binaries = ["structopt", "cargo_metadata", "semver", "scroll", "goblin", "clap", "cargo-toml2"]
